app/globals.css
@import "tailwindcss";

:root {
  --color-primary:#a51d1d;
  --color-background:#F9FAFB;
  --color-secondary: #FFFFFF;
  --color-accent: #D6AD60;
  --color-text: #1F2937;
  --color-card-bg: #FFFFFF;
  --color-border: #E5E7EB;
  --color-error: #DC2626;
  --color-success: #16A34A;
  --color-warning: #CA8A04;
  --color-info: #2563EB;
  --color-gray-50: #F9FAFB;
  --color-gray-100: #F3F4F6;
  --color-gray-200: #E5E7EB;
  --color-gray-300: #D1D5DB;
  --color-gray-500: #6B7280;
  --color-gray-600: #4B5563;
  --color-gray-700: #374151;
  --color-gray-800: #1F2937;
  --color-gray-900: #111827;
  --color-input-bg: #FFFFFF;
  --color-input-border: #D1D5DB;
  --color-modal-overlay: rgba(0, 0, 0, 0.5);
}


@theme inline {
  --font-sans: var(--font-geist-sans);
  --font-mono: var(--font-geist-mono);
  --font-serif: var(--font-playfair);
}


.dark {
  --color-primary:  #a51d1d;
  --color-background: #111827;
  --color-secondary: #1F2937;
  --color-accent: #D6AD60;
  --color-text: #F9FAFB;
  --color-card-bg: #1F2937;
  --color-border: #374151;
  --color-error: #F87171;
  --color-success: #4ADE80;
  --color-warning: #FACC15;
  --color-info: #2571cf;
  --color-gray-50: #1F2937;
  --color-gray-100: #374151;
  --color-gray-200: #4B5563;
  --color-gray-300: #6B7280;
  --color-gray-500: #9CA3AF;
  --color-gray-600: #D1D5DB;
  --color-gray-700: #E5E7EB;
  --color-gray-800: #F3F4F6;
  --color-gray-900: #F9FAFB;
  --color-input-bg: #374151;
  --color-input-border: #4B5563;
  --color-modal-overlay: rgba(0, 0, 0, 0.8);
}

body {
  font-family: Arial, Helvetica, sans-serif;
}

/* Добавьте в ваш globals.css */
.notification-dropdown {
  backdrop-filter: blur(10px);
}

/* Стили для скроллбара */
.max-h-96::-webkit-scrollbar {
  width: 4px;
}

.max-h-96::-webkit-scrollbar-track {
  background: var(--color-secondary);
}

.max-h-96::-webkit-scrollbar-thumb {
  background: var(--color-text)/20;
  border-radius: 2px;
}

.max-h-96::-webkit-scrollbar-thumb:hover {
  background: var(--color-text)/40;
}

